Moved Room types back to the global namespace
Also updated the API documentation and started work on the Real-time handling for each room.

This requires a migration away from how the current room code repository works, as it now needs to store references to these objects.
