# sock-vote-server/Sources/App/Controllers/RoomController.swift
@@ -1,18 +1,18 @@
 import Hummingbird
 
-struct RoomController<Repository: Room.Repository> {
+struct RoomController<Repository: RoomRepository> {
 
     /// The repository to use to find and access rooms
     let repository: Repository
 
     var routes: RouteCollection<AppRequestContext> {
         return RouteCollection(context: AppRequestContext.self)
-            .get(":code", use: self.getRoom)
-            .post(use: self.createRoom)
+            .get("info/:code", use: self.getRoom)
+            .post("create", use: self.createRoom)
     }
 
     @Sendable
-    func getRoom(request: Request, context: some RequestContext) async throws -> Room.Info {
+    func getRoom(request: Request, context: some RequestContext) async throws -> RoomInfo {
         let code = try context.parameters.require("code")
         let room = try await repository.findRoom(code: code)
         return room  
@@ -23,7 +23,7 @@ struct RoomController<Repository: Room.Repository> {
     }
 
     @Sendable
-    func createRoom(request: Request, context: some RequestContext) async throws -> Room.FullInfo {
+    func createRoom(request: Request, context: some RequestContext) async throws -> FullRoomInfo {
         let createRequest = try await request.decode(as: CreateRoomRequest.self, context: context)
         return try await repository.addRoom(name: createRequest.name)
     }
