# swagger.yml
@@ -1,14 +1,13 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: sock-vote
   description: 
     Server API for sock-vote.
-    This document lays out the APIs for the server component,
-    but doesn't include the websocket conneciton details.
+    This document lays out the APIs for the server component of SockVote.
   version: 0.1.0
   
 paths:
-  /room:
+  /room/create:
     post:
       summary: Creates a new room
       description:
@@ -33,7 +32,7 @@ paths:
                 name: "PCSoc Annual General Meeting"
                 code: "123456"
                 token: "CDE33D83-EC29-4907-8EC0-C6FD9EB6CEFC"
-  /room/{code}:
+  /room/info/{code}:
     get:
       summary: Get information about a room
       description:
@@ -59,7 +58,38 @@ paths:
         "404":
           description:
             The room does not exist.
-      
+  /room/connect/{code}:
+    get:
+      summary: Connect to a room
+      description:
+        Connect to a room using WebSocket
+      parameters:
+        - in: path
+          name: code
+          required: true
+          schema:
+            type: string
+        - in: header
+          name: Connection
+          required: true
+          schema:
+            type: string
+            const: "upgrade"
+        - in: header
+          name: Upgrade
+          required: true
+          schema:
+            type: string
+            const: "WebSocket"
+      responses:
+        "101":
+          description:
+            The room was found and the connection will be upgraded
+            to a WebSocket connection.
+        "404":
+          description:
+            The room can't be found
+
 components:
   schemas:
     RoomCreationRequest:
@@ -78,5 +108,9 @@ components:
       properties:
         name:
           type: string
+        code:
+          type: string
+    RoomConnectionRequest:
+      properties:
         code:
           type: string
